# multimodal-local-rag

./: .env.example  .gitignore  LICENSE  Multimodal RAG Image Table balanced.json  Multimodal RAG Image Table general fallback.json  Multimodal RAG Image Table guarded v2.json  Multimodal RAG Image Table guarded.json  Multimodal RAG Image Table improved.json  Multimodal RAG Image Table speed v2.json  Multimodal RAG Image Table speed.json  Multimodal RAG.json  README.md  docker-compose.dev.yml  docker-compose.yml  init-db.sql  multimodal-rag-architektur.excalidraw  ollama_client.py  opencode.json  opencode.lmstudio.json  rag-restart.sh  rag-restart.sh.codex-bak  rag-restart.sh.v1.bak  setup.sh  table-rag-concept.excalidraw
backend/: Dockerfile  pyproject.toml
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: config.py  errors.py  main.py  router.py  schemas.py
backend/src/services/: document_chunker_service.py  model_lifecycle_service.py  reconciliation_service.py  reranker_service.py  table_store_service.py  vector_store_service.py
backend/tests/: conftest.py  test_document_chunker_service.py  test_reranker_service.py  test_vector_store_service.py
backup/: multimodal-rag-backup-2026-04-26-vor-bilder-fix.json  multimodal-rag-backup-2026-04-26-vor-prompt-anpassung.json
docs/: 01_start-stop.md  02_architektur.md  03_kunden-narrativ.md  04_troubleshooting.md  05_verbesserte-workflow-version.md
